Fix(SkillsMenu):Animation render on mobile

--- a/src/styles/skillsMenu.css
+++ b/src/styles/skillsMenu.css
@@ -72,7 +72,6 @@
   opacity: 0;
 }
 
-/* Define the keyframe animation */
 @keyframes fadeIn {
   from {
     opacity: 0;
@@ -82,10 +81,9 @@
   }
 }
 
-/* Define the keyframe animation for the wave effect */
 @keyframes wave {
   0% {
-    opacity: 0;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 5px 15px;
     background-position: 0 0;
   }
   25% {
@@ -93,7 +91,7 @@
     background-position: 0 0;
   }
   50% {
-    box-shadow: rgba(245, 222, 179, 0.3) 0px 5px 15px;
+    box-shadow: rgba(245, 222, 179, 0.5) 0px 5px 15px;
     background-position: 0 0;
   }
   75% {
@@ -117,7 +115,6 @@
 
 .unfilled {
   background: linear-gradient(180deg, #1c8298, #074654, #074654);
-  animation: fadeIn 10s ease-out forwards;
 }
 
 .skill-sub-container {
